--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tpify"
-version = "0.0.1-alpha"
+version = "0.0.1a3"
 authors = [{ name = "Kyle Shaver", email = "kyle@tpify.dev" }]
 description = "Return, don't raise."
 readme = "README.md"
